syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// PostService ----------------------------------------------------------------

service PostSvc {
    rpc CreatePost(CreatePostRequest) returns (Post) {}
    rpc CreatePostLike(CreatePostLikeRequest) returns (Post) {}
    rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {}
    rpc CreateCommentLike(CreateCommentLikeRequest) returns (Comment) {}

    rpc DeletePost(DeleteRequest) returns (DeleteResponse) {}
    rpc DeletePostLike(DeleteRequest) returns (DeleteResponse) {}
    rpc DeleteComment(DeleteRequest) returns (DeleteResponse) {}
    rpc DeleteCommentLike(DeleteRequest) returns (DeleteResponse) {}
    
    rpc GetPost(GetPostRequest) returns (Post) {}
    rpc GetProfile(GetPostsRequest) returns (GetPostsResponse) {}
    rpc GetFeed(GetPostsRequest) returns (GetPostsResponse) {}
    rpc GetPostLikes(GetPostLikesRequest) returns (PostLikesResponse) {}
    rpc GetPostComments(GetPostCommentsRequest) returns (CommentsResponse) {}
    rpc GetCommentLikes(GetCommentLikesRequest) returns (CommentLikesResponse) {}
    rpc GetComment(GetCommentRequest) returns (Comment) {}
}

message Post {
    string PostID = 1 [(gogoproto.jsontag) = "post_id"];
    string FileID = 2 [(gogoproto.jsontag) = "file_id"];
    uint32 LikeCount = 3 [(gogoproto.jsontag) = "like_count"];
    repeated Comment TopComments = 4 [(gogoproto.jsontag) = "top_comments"];
    uint32 CommentCount = 5 [(gogoproto.jsontag) = "comment_count"];
    string UserID = 6 [(gogoproto.jsontag) = "user_id"];
    string Caption = 7 [(gogoproto.jsontag) = "caption"];
    google.protobuf.Timestamp CreatedAt = 8 [(gogoproto.jsontag) = "created_at", (gogoproto.stdtime) = true];
}

message Comment {
    string CommentID = 1 [(gogoproto.jsontag) = "comment_id"];
    string UserID = 2 [(gogoproto.jsontag) = "user_id"];
    string PostID = 3 [(gogoproto.jsontag) = "post_id"];
    string Text = 4 [(gogoproto.jsontag) = "text"];
    uint32 LikeCount = 5 [(gogoproto.jsontag) = "like_count"];
    google.protobuf.Timestamp CreatedAt = 6 [(gogoproto.jsontag) = "created_at", (gogoproto.stdtime) = true];
}

message PostLike {
    string LikeID = 1 [(gogoproto.jsontag) = "like_id"];
    string UserID = 2 [(gogoproto.jsontag) = "user_id"];
    string PostID = 3 [(gogoproto.jsontag) = "post_id"];
    google.protobuf.Timestamp CreatedAt = 4 [(gogoproto.jsontag) = "created_at", (gogoproto.stdtime) = true];
}

message CommentLike {
    string LikeID = 1 [(gogoproto.jsontag) = "like_id"];
    string UserID = 2 [(gogoproto.jsontag) = "user_id"];
    string CommentID = 3 [(gogoproto.jsontag) = "comment_id"];
    google.protobuf.Timestamp CreatedAt = 4 [(gogoproto.jsontag) = "created_at", (gogoproto.stdtime) = true];
}

message CreatePostRequest {
    string PostID = 1 [(gogoproto.jsontag) = "post_id"];
    string FileID = 2 [(gogoproto.jsontag) = "file_id"];
    string UserID = 3 [(gogoproto.jsontag) = "user_id"];
    string Caption = 4 [(gogoproto.jsontag) = "caption"];
}

message CreatePostLikeRequest {
    string LikeID = 1 [(gogoproto.jsontag) = "like_id"];
    string UserID = 2 [(gogoproto.jsontag) = "user_id"];
    string PostID = 3 [(gogoproto.jsontag) = "post_id"];
}

message CreateCommentLikeRequest {
    string LikeID = 1 [(gogoproto.jsontag) = "like_id"];
    string UserID = 2 [(gogoproto.jsontag) = "user_id"];
    string CommentID = 3 [(gogoproto.jsontag) = "comment_id"];
}

message CreateCommentRequest {
    string PostID = 1 [(gogoproto.jsontag) = "post_id"];
    string CommentID = 2 [(gogoproto.jsontag) = "comment_id"];
    string UserID = 3 [(gogoproto.jsontag) = "user_id"];
    string Text = 4 [(gogoproto.jsontag) = "text"];
}

message CreateCommentResponse {
    Post Post = 1 [(gogoproto.jsontag) = "post"];
    Comment Comment = 2 [(gogoproto.jsontag) = "comment"];
}

message DeleteRequest {
    string UserID = 1 [(gogoproto.jsontag) = "user_id"];
    string DeleteID = 2 [(gogoproto.jsontag) = "delete_id"];
}

message DeleteResponse {
}

message GetPostRequest {
    string PostID = 1 [(gogoproto.jsontag) = "post_id"];
}

message GetPostsRequest {
    string UserID = 1 [(gogoproto.jsontag) = "user_id"];
    uint32 Page = 2 [(gogoproto.jsontag) = "page"];
}

message GetPostsResponse {
    repeated Post Posts = 1 [(gogoproto.jsontag) = "posts"];
    uint32 NextPage = 2 [(gogoproto.jsontag) = "next_page"];
}

message GetCommentRequest {
    string CommentID = 1 [(gogoproto.jsontag) = "comment_id"];
}

message GetPostCommentsRequest {
    string PostID = 1 [(gogoproto.jsontag) = "post_id"];
    uint32 Page = 2 [(gogoproto.jsontag) = "page"];
}

message CommentsResponse {
    repeated Comment Comments = 1 [(gogoproto.jsontag) = "comments"];
    uint32 NextPage = 2 [(gogoproto.jsontag) = "next_page"];
}

message GetPostLikesRequest {
    string PostID = 1 [(gogoproto.jsontag) = "post_id"];
    uint32 Page = 2 [(gogoproto.jsontag) = "page"];
}

message GetCommentLikesRequest {
    string CommentID = 1 [(gogoproto.jsontag) = "comment_id"];
    uint32 Page = 2 [(gogoproto.jsontag) = "page"];
}

message PostLikesResponse {
    repeated PostLike Likes = 1 [(gogoproto.jsontag) = "likes"];
    uint32 NextPage = 2 [(gogoproto.jsontag) = "next_page"];
}

message CommentLikesResponse {
    repeated CommentLike Likes = 1 [(gogoproto.jsontag) = "likes"];
    uint32 NextPage = 2 [(gogoproto.jsontag) = "next_page"];
}
